<resources>
    <string name="app_name">HappyPlaces</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="btn_text_view_on_map">VIEW ON MAP</string>
    <string name="note_text_no_happy_places_found_yet">No Happy Places found yet. Kindly add one.</string>
    <string name="image_content_description">image</string>
    <string name="title_activity_maps">HAPPY PLACE MAP</string>
    <string name="text_select_current_location">SELECT CURRENT LOCATION</string>
</resources>