<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".activities.AddHappyPlaceActivity">

    <androidx.appcompat.widget.Toolbar
        android:background="@color/color_primary"
        android:id="@+id/tbAddPlace"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svMain"
        android:fillViewport="true"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbAddPlace">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/main_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/CustomOutlinedBoxTheme">

                <androidx.appcompat.widget.AppCompatEditText
                    android:hint="@string/edit_text_hint_title"
                    android:id="@+id/etTitle"
                    android:inputType="textCapWords"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/color_primary"
                    android:textSize="@dimen/edit_text_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilTitle"
                style="@style/CustomOutlinedBoxTheme">

                <androidx.appcompat.widget.AppCompatEditText
                    android:hint="@string/edit_text_hint_description"
                    android:id="@+id/etDescription"
                    android:inputType="textCapWords"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/color_primary"
                    android:textSize="@dimen/edit_text_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDate"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilDescription"
                style="@style/CustomOutlinedBoxTheme">

                <androidx.appcompat.widget.AppCompatEditText
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/edit_text_hint_date"
                    android:id="@+id/etDate"
                    android:inputType="textCapWords"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/color_primary"
                    android:textSize="@dimen/edit_text_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilDate"
                style="@style/CustomOutlinedBoxTheme">

                <androidx.appcompat.widget.AppCompatEditText
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/edit_text_hint_location"
                    android:id="@+id/etLocation"
                    android:inputType="textCapWords"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/color_primary"
                    android:textSize="@dimen/edit_text_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:background="@drawable/shape_image_view_border"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:id="@+id/tvSelectCurrentLocation"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_place_select_current_location_marginTop"
                android:layout_width="match_parent"
                android:padding="@dimen/add_place_select_current_location_padding"
                android:text="@string/text_select_current_location"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/add_place_select_current_location_textSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilLocation"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:background="@drawable/shape_image_view_border"
                android:id="@+id/ivPlaceImage"
                android:layout_height="@dimen/add_screen_place_image_size"
                android:layout_marginTop="@dimen/add_screen_text_add_image_marginTop"
                android:layout_width="@dimen/add_screen_place_image_size"
                android:padding="@dimen/add_screen_place_image_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/add_screen_image_placeholder"
                app:layout_constraintEnd_toStartOf="@+id/tvAddImage"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSelectCurrentLocation"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:id="@+id/tvAddImage"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:padding="@dimen/add_screen_text_add_image_padding"
                android:text="@string/text_add_image"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/add_screen_text_add_image_textSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintBottom_toBottomOf="@id/ivPlaceImage"
                app:layout_constraintStart_toEndOf="@+id/ivPlaceImage"
                app:layout_constraintTop_toTopOf="@id/ivPlaceImage"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:background="@drawable/shape_button_rounded"
                android:id="@+id/btnSave"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_btn_save_marginTop"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/add_screen_btn_save_paddingTopBottom"
                android:paddingTop="@dimen/add_screen_btn_save_paddingTopBottom"
                android:text="@string/btn_text_save"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPlaceImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>